[package]
name = "openworkers-runtime-jsc"
version = "0.2.0"
edition = "2021"

[features]
actix = ["dep:actix-web"]

[dependencies]
# JSCore runtime
rusty_jsc = "0.1.0"
rusty_jsc_macros = "0.1.0"

# For direct JSC FFI bindings (context groups)
libc = "0.2"

# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"

# Signal handling (for timeouts and graceful termination)
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP
bytes = { version = "1.11", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Optional dependencies for examples/integration
actix-web = { version = "4.12.0", features = ["macros"], optional = true }
