[package]
name = "openworkers-runtime-jsc"
version = "0.5.2"
edition = "2024"

[features]
actix = ["dep:actix-web", "openworkers-core/actix"]

[dependencies]
# Common types
# openworkers-core = { path = "../openworkers-core", features = ["testing"] }
openworkers-core = { git = "https://github.com/openworkers/openworkers-core", tag = "v0.5.1", features = ["testing"] }

# JSCore runtime (using local fork)
rusty_jsc = { git = "https://github.com/wasmerio/rusty_jsc", rev = "1a6f72bf4f3c423f8cd3e7d91e121a0c0ad50af7" }
rusty_jsc_macros = { git = "https://github.com/wasmerio/rusty_jsc", rev = "1a6f72bf4f3c423f8cd3e7d91e121a0c0ad50af7" }

# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"

# Signal handling (for timeouts and graceful termination)
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP
bytes = { version = "1.11", features = ["serde"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"

# Optional dependencies for examples/integration
actix-web = { version = "4.12.0", features = ["macros"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "stream_benchmark"
harness = false

[[bench]]
name = "generic_benchmark"
harness = false
